--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "@google-cloud/bigquery": "^7.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1"
   },
