--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,8 @@
     "mysql": "^2.18.1"
   },
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node main.js",
+    "dev": "nodemon main.js"
   },
   "keywords": [],
   "author": "",
