--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,5 +5,6 @@ WORKDIR /backend
 EXPOSE 8080
 
 RUN npm i
+RUN export GOOGLE_APPLICATION_CREDENTIALS="/backend/key.json"
 
 ENTRYPOINT [ "npm", "run", "dev" ]
