Updated gitignore and generators

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@
 *key.json
 *node_modules
 *package-lock.json
-generators/pincode_extractor/penv
+*penv
 !generators/pincode_extractor/govt_india_pincode.csv
