--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@vis.gl/react-google-maps": "^1.0.0",
     "axios": "^1.7.0",
     "firebase": "^10.12.0",
+    "react-firebase-hooks": "^5.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
