--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google-cloud/bigquery": "^5.7.0",
     "@react-google-maps/api": "^2.19.3",
     "@vis.gl/react-google-maps": "^1.0.0",
     "axios": "^1.7.0",
+    "dotenv": "^16.4.5",
     "firebase": "^10.12.0",
-    "react-firebase-hooks": "^5.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.23.1",
-    "react-select": "^5.8.0",
-    "@google-cloud/bigquery": "^5.7.0"
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
